--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,6 +15,7 @@ galaxy_info:
         - all
     - name: Debian
       versions:
+        - bullseye
         - buster
         - stretch
     - name: EL
@@ -25,9 +26,6 @@ galaxy_info:
       versions:
         - 31
         - 32
-    - name: Gentoo
-      versions:
-        - all
     - name: Ubuntu
       versions:
         - bionic
@@ -39,8 +37,8 @@ galaxy_info:
 
 dependencies:
   - role: andrewrothstein.unarchive-deps
-    version: v1.1.5
+    version: v1.2.0
   - role: andrewrothstein.alpine-glibc-shim
-    version: v2.0.12
+    version: v2.0.14
   - role: andrewrothstein.bash
-    version: v1.1.6
+    version: v1.1.7
