--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,9 +7,6 @@ galaxy_info:
     - MIT
   min_ansible_version: 2.0
   platforms:
-    - name: Alpine
-      versions:
-        - all
     - name: Archlinux
       versions:
         - all
@@ -19,23 +16,17 @@ galaxy_info:
         - buster
     - name: EL
       versions:
-        - 7
+        - 8
+        - 9
     - name: Fedora
       versions:
-        - 34
-        - 35
+        - 36
+        - 37
     - name: Ubuntu
       versions:
         - bionic
         - focal
+        - jammy
   galaxy_tags:
     - development
   role_name: azure_pipelines_agent
-
-dependencies:
-  - role: andrewrothstein.unarchive-deps
-    version: v1.2.0
-  - role: andrewrothstein.alpine-glibc-shim
-    version: v2.0.14
-  - role: andrewrothstein.bash
-    version: v1.1.7
