--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,7 +1,10 @@
 ---
 # vars file for azure_pipelines_agent
+azure_pipelines_agent_os: '{{ ansible_system | lower }}'
+azure_pipelines_agent_arch: '{{ azure_pipelines_agent_arch_map[ansible_architecture] }}'
 azure_pipelines_agent_platform: '{{ azure_pipelines_agent_os }}-{{ azure_pipelines_agent_arch }}'
 azure_pipelines_agent_archive: vsts-agent-{{ azure_pipelines_agent_platform }}-{{ azure_pipelines_agent_ver }}.{{ azure_pipelines_agent_archive_type }}
+azure_pipelines_agent_tmp_archive: '{{ azure_pipelines_agent_tmpdir | default("/tmp") }}/{{ azure_pipelines_agent_archive }}'
 azure_pipelines_agent_url: '{{ azure_pipelines_agent_mirror }}/{{ azure_pipelines_agent_ver }}/{{ azure_pipelines_agent_archive }}'
 azure_pipelines_agent_checksum: '{{ azure_pipelines_agent_checksums[azure_pipelines_agent_ver][azure_pipelines_agent_platform] }}'
 azure_pipelines_agent_install_dir: '{{ azure_pipelines_agent_parent_install_dir }}/vsts-agent-{{ azure_pipelines_agent_ver }}'
