--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,32 +1,34 @@
 ---
 galaxy_info:
   author: Andrew Rothstein
-  description: installs the azure pipelines build agent
   company: BlackRock Financial Management
-  license:
-    - MIT
-  min_ansible_version: 2.0
+  description: installs the azure pipelines build agent
+  galaxy_tags:
+    - development
+  license: MIT
+  min_ansible_version: '2.0'
+  namespace: andrewrothstein
   platforms:
-    - name: Archlinux
+    - name: Alpine
+      versions:
+        - all
+    - name: ArchLinux
       versions:
         - all
     - name: Debian
       versions:
+        - bookworm
         - bullseye
-        - buster
     - name: EL
       versions:
-        - 8
-        - 9
+        - '8'
+        - '9'
     - name: Fedora
       versions:
-        - 36
-        - 37
+        - '40'
+        - '41'
     - name: Ubuntu
       versions:
-        - bionic
-        - focal
         - jammy
-  galaxy_tags:
-    - development
+        - noble
   role_name: azure_pipelines_agent
