--- a/test.yml
+++ b/test.yml
@@ -1,4 +1,5 @@
 ---
-- hosts: all
+- name: Testing andrewrothstein.azure_pipelines_agent
+  hosts: all
   roles:
-  - role: '{{ playbook_dir }}'
+    - role: '{{ playbook_dir }}'
